Fixed nav spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,7 +33,7 @@ nav {
     color: #fff;
     font-family: 'Pacifico', cursive;
     font-size: 40px;
-    margin-right: 10vw;
+    margin-right: 4vw;
     margin-left: 5vw;
     width: 50%;
 }
@@ -48,29 +48,34 @@ nav {
     color: #fff;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
-    padding: 1em;
-    width: 100%;
-    // margin-right: 0;
-    align-items: center;
     border: 2px solid #0D76BA;
+    border-radius: 10px;
+    padding: 10px 0px 10px 0px;
+    width: 100%;
     margin-right: 1vw;
+    align-items: center;
+    margin-right: 1vw;
+    margin-bottom: 0px;
+
 }
 
 .nav-item a:hover {
     border: 2px solid #fff;
     border-radius: 10px;
-    padding: 1em;
+    padding: 10px 0px 10px 0px;
     width: 100%;
-    // width: 50vw;
-    // margin-right: 0px;
+    align-items: center;
+    margin-right: 1vw;
+    margin-bottom: 0px;
 }
 .nav-item a:active {
     border: 2px solid #fff;
     border-radius: 10px;
-    padding: 1em;
+    padding: 10px 0px 10px 0px;
     width: 100%;
-    // width: 50vw;
-    // margin-right: 0px;
+    align-items: center;
+    margin-right: 1vw;
+    margin-bottom: 0px;
 }
 
 #navbarSupportedContent {
@@ -89,11 +94,14 @@ nav {
 // }
 
 a.nav-link {
-    background: inherit;
+    border: 2px solid #0D76BA;
+    border-radius: 10px;
+    padding: 10px 0px 10px 0px;
     width: 100%;
-    justify-content: space-between;
     margin-right: 1vw;
-    padding: 1em;
+    align-items: center;
+    margin-right: 1vw;
+    margin-bottom: 0px;
 }
 
 div#navcircle {
@@ -137,17 +145,19 @@ div.container-fluid {
         overflow: hidden;
     }
 
+    // #fixedColumn1 {
+    //     position: fixed;
+
+    // }
+    // #fixedColumn2 {
+    //     position: fixed;
+
+    // }
+
     .col-md-8 {
         height: 83vh;
         overflow: hidden;
     }
-}
-
-#footer {
-    background-color: #0D76BA; 
-    position:fixed;
-    margin-bottom: 0;
-    height: 8vh;
 }
 
 .col-sm-2  {
@@ -157,4 +167,11 @@ div.container-fluid {
     margin-left: 5vw;
     width: 1em;
     display: inline-flex;
+}
+
+#footer {
+    background-color: #00ADEF; 
+    position:fixed;
+    margin-bottom: 0;
+    height: 8vh;
 }
